<resources>
    <string name="app_name">SIT305 Quiz App</string>
    <string name="sit305_quiz_app">SIT305 Quiz App</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="title1">Question No.1: Parameters</string>
    <string name="title2">Question No.2: Layout</string>
    <string name="title3">Question No.3: Class </string>
    <string name="title4">Question No.4: LifeCycle State </string>
    <string name="title5">Question No.5: LifeCycle Callback </string>
    <string name="question1"> Which parameters are used to by views to tell their parents how they want to be laid out?</string>
    <string name="question2"> To match the view to be just big enough to enclose its content, you use?</string>
    <string name="question3"> The _____ class is a crucial component of an Android app, and the way they are launched and put together is a fundamental part of the platform\'s application model</string>
    <string name="question4"> Which of these is not a possible LifeCycle state of Activity?</string>
    <string name="question5"> Which is not a lifecycle callback?</string>
    <string name="answer1.1"> Layout Parameters </string>
    <string name="answer1.2"> Position Parameters </string>
    <string name="answer1.3"> Co-ordinate Parameters </string>
    <string name="answer2.1"> MATCH_PARENT </string>
    <string name="answer2.2"> WRAP_CONTENT </string>
    <string name="answer2.3"> A Specific Number </string>
    <string name="answer3.1"> ViewGroup </string>
    <string name="answer3.2"> View </string>
    <string name="answer3.3"> Activity </string>
    <string name="answer4.1"> Transparent </string>
    <string name="answer4.2"> Partially Hidden </string>
    <string name="answer4.3"> Fully Hidden </string>
    <string name="answer5.1"> onCreate </string>
    <string name="answer5.2"> onStop </string>
    <string name="answer5.3"> onClick </string>
    <string name="progressbar1"> 1/5 </string>
    <string name="progressbar2"> 2/5 </string>
    <string name="progressbar3"> 3/5 </string>
    <string name="progressbar4"> 4/5 </string>
    <string name="progressbar5"> 5/5 </string>
    <string name="your_score">YOUR SCORE:</string>
    <string name="take_new_quiz">Take New Quiz</string>
    <string name="finish">Finish</string>
</resources>