<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuestionActivity1">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/progressbar5" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:progressDrawable="@drawable/progress_border"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="376dp"
        android:layout_height="34dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:text="@string/title5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="375dp"
        android:layout_height="84dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="0"
        android:text="@string/question5" />

    <Button
        android:id="@+id/button22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0"
        android:background="@drawable/answer_text_border"
        android:onClick="selectAnswer"
        android:text="@string/answer5.1" />

    <Button
        android:id="@+id/button32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0"
        android:background="@drawable/answer_text_border"
        android:onClick="selectAnswer"
        android:text="@string/answer5.2" />

    <Button
        android:id="@+id/button42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0"
        android:background="@drawable/answer_text_border"
        android:onClick="selectAnswer"
        android:text="@string/answer5.3" />

    <Button
        android:id="@+id/button52"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="60dp"
        android:layout_weight="0"
        android:background="@drawable/button_text_border"
        android:onClick="onClick"
        android:text="Submit" />
</LinearLayout>